--- a/Elektrotechnik/elektrischeWiderstand.html
+++ b/Elektrotechnik/elektrischeWiderstand.html
@@ -26,7 +26,7 @@
       <h2>Elektrische Widerstand</h2>
       <h3>Definition</h3>
       <p>
-        Die Bewegungen Elektronen in einem Leiter werden durch dauernde
+        Die Bewegungen der Elektronen in einem Leiter werden durch dauernde
         Zusammenstöße mit den Atomkernen des Leitermaterials gehemmt. Mit dem
         „elektrischen Widerstand“ wird das Bestreben eines Materials bezeichnet,
         den elektrischen Stromfluss zu bremsen. Je größer der elektrische
@@ -40,6 +40,12 @@
         alt="elektrischerWiderstand"
         class="zeichnungen"
       />
+
+      <h2>Ohmmeter</h2>
+      <p>
+        Zum Messen des elektrischen Widerstands benutzt man einen:
+        <i>Ohmmeter</i>
+      </p>
       <h2>Elektrische Leitwert</h2>
       <h3>Definition</h3>
       <p>
