--- a/Physik/index.html
+++ b/Physik/index.html
@@ -40,6 +40,10 @@
             >Arbeit, Energie, Leistung</a
           >
         </li>
+        <li><a href="auftrieb.html" class="indexLink">Auftrieb</a></li>
+        <li>
+          <a href="druck.html" class="indexLink">Druck</a>
+        </li>
         <li><a href="impuls.html" class="indexLink">Impuls</a></li>
         <li>
           <a href="kinematik.html" class="indexLink">Kinematik</a>
