--- a/Physik/strahlenoptik.html
+++ b/Physik/strahlenoptik.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="de" dir="ltr">
   <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Niederkorn Damon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
     <script src="../assets/insertChapterHTML.js"></script>
+    <script src="../assets/mathJax.js"></script>
+
     <script
       type="text/javascript"
       id="MathJax-script"
@@ -23,12 +24,12 @@
       <p id="printWatermark"></p>
       <h1>Strahlenoptik</h1>
       <h2>Reflektion</h2>
-      <p>Es gibt 2 Arten von Reflektionen :</p>
+      <p>Es gibt 2 Arten von Reflektionen:</p>
       <ul>
         <li><p>Diffuse Reflektion</p></li>
-        <li><p>Gesetzmä&beta;ige Reflektion</p></li>
+        <li><p>Gesetzmäßige Reflektion</p></li>
       </ul>
-      <h2>Reflektions Gesetz bei gemä&beta;igter Reflektion</h2>
+      <h2>Reflektions Gesetz bei gemäßigter Reflektion</h2>
       <p>
         Der einfallende Strahl, das Lot und der reflektierte Strahl liegen in
         einer Ebene. <br />
@@ -267,9 +268,7 @@
       <p>Des weiteren gilt:</p>
       $$ \gamma =\beta_{1} +\beta_{2} $$ $$ \Rightarrow \beta_{2} =\frac{\gamma
       }{2} $$
-      <p>
-        Das hei&beta;t der Strahlengang verläuft symmetrisch durch das Prisma.
-      </p>
+      <p>Das heißt der Strahlengang verläuft symmetrisch durch das Prisma.</p>
 
       <h2>Fraunhoferformel</h2>
       <h3>Herleitung</h3>
@@ -334,15 +333,15 @@
         </li>
       </ol>
       <img
-        class="zeichnungen"
         src="img/Strahlenoptik/zerstreuungslinsenZeichnung.png"
         alt="Zerstreuungslinsen"
+        class="zeichnungen"
       />
       <h3>Skizzierung</h3>
       <img
-        class="zeichnungen"
         src="img/Strahlenoptik/zerstreuungslinseSkizze.png"
         alt="Skizze Zerstreuungslinsen"
+        class="zeichnungen"
       />
       <h2>Hauptstrahlen bei Linsen</h2>
       <h3>Brennpunkt</h3>
@@ -457,8 +456,8 @@
         alt="reelle und virtuelle Bilder"
       />
       <p>Es gilt:</p>
-      $$F_1\ und F_2\, \ Brennpunkte$$ $$G,\ Gegenstandsgrö&beta;e $$ $$B, \
-      Bildgrö&beta;e $$ $$g, \ Gegenstandsweite$$ $$b, \ Bildweite $$ $$f,\
+      $$F_1\ und F_2\, \ Brennpunkte$$ $$G,\ Gegenstandsgröße $$ $$B, \
+      Bildgröße $$ $$g, \ Gegenstandsweite$$ $$b, \ Bildweite $$ $$f,\
       Brennweite$$
       <h2>Bildkonstruktion Sammellinsen</h2>
       <p>Es gelten folgende Vorzeichenregeln:</p>
@@ -510,22 +509,22 @@
           <tr>
             <td>\( 2f > g > f\)</td>
             <td>\( 2f > b > \infty \)</td>
-            <td>vergrö&beta;ert, umgekehrt, reell</td>
+            <td>vergrößert, umgekehrt, reell</td>
           </tr>
           <tr>
             <td>\( f\)</td>
             <td>\( + \infty \)</td>
-            <td>sehr gro&beta;, umgekehrt, reell</td>
+            <td>sehr groß, umgekehrt, reell</td>
           </tr>
           <tr>
             <td>\( f > g > 0 \)</td>
             <td>\( -\infty < b < 0 \)</td>
-            <td>vergrö&beta;ert, aufrecht, virtuell</td>
+            <td>vergrößert, aufrecht, virtuell</td>
           </tr>
           <tr>
             <td>\( g \rightarrow 0 \)</td>
             <td>\( b \rightarrow 0 \)</td>
-            <td>gleich gro&beta;, aufrecht, virtuell</td>
+            <td>gleich groß, aufrecht, virtuell</td>
           </tr>
         </table>
       </div>
@@ -572,7 +571,7 @@
       </p>
       $$ 1^{\circ} = 60^{\prime}\ (min)$$ $$ 1^{\circ} = 3600^{\prime \prime}\
       (s)$$
-      <h2>Abbildungsma&beta;stab</h2>
+      <h2>Abbildungsmaßstab</h2>
       <h3>Herleitung</h3>
       <img
         class="zeichnungen"
@@ -582,11 +581,11 @@
       <p>Da ähnliche Dreiecke:</p>
       $$ \tan(\omega) = \frac{G}{g} = \frac{B}{b} $$ $$ \Leftrightarrow
       \frac{B}{G} =\frac{b}{g} $$
-      <h3>Abbildungsma&beta;stab</h3>
+      <h3>Abbildungsmaßstab</h3>
       $$ \Gamma = \left| \frac{B}{G} \right| $$
       <p>
-        Der Abbildungsma&beta;stab gibt uns an, wie viel Mal das Bild
-        grö&beta;er als der Gegenstand ist und ist immer positiv.
+        Der Abbildungsmaßstab gibt uns an, wie viel Mal das Bild größer als der
+        Gegenstand ist und ist immer positiv.
       </p>
       <h2>Dioptrie</h2>
       <p>
