--- a/changeLog.html
+++ b/changeLog.html
@@ -125,6 +125,17 @@
                 Schaltungsentwurf, Schaltnetze
               </li>
             </ul> -->
+            <h3>Update 52</h3>
+            <time>.2024</time>
+            <ul>
+              <li class="changeLogText">
+                Neit Kapitel an der Physik: Auftrieb, Druck
+              </li>
+              <li class="changeLogText">
+                Tabelle passen sech elo dem Conent unn
+              </li>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
             <h3>Update 51</h3>
             <time>16.3.2024</time>
             <ul>
