--- a/Physik/index.html
+++ b/Physik/index.html
@@ -16,6 +16,16 @@
     <div class="main-wrapper">
       <h1>Physik</h1>
 
+      <ol>
+        <li>
+          <a href="grundlagenDerPhysik.html" class="indexLink"
+            >Grundlagen der Physik</a
+          >
+        </li>
+      </ol>
+
+      <hr />
+
       <h2>Astrophysik</h2>
       <ol>
         <li><a href="gravitation.html" class="indexLink">Gravitation</a></li>
@@ -121,6 +131,9 @@
       <h2>Wellenlehre</h2>
       <ol>
         <li>
+          <a href="dopplerEffekt.html" class="indexLink">Doppler-Effekt</a>
+        </li>
+        <li>
           <a href="schwingungen.html" class="indexLink">Schwingungen</a>
         </li>
         <li>
@@ -128,11 +141,19 @@
             >Mechanische Wellen</a
           >
         </li>
+        <li>
+          <a href="stehendeWellen.html" class="indexLink">Stehende Wellen</a>
+        </li>
       </ol>
 
       <hr />
       <h2>Tabellen</h2>
       <ul>
+        <li>
+          <a href="astronomischeDaten.html" class="indexLink"
+            >Astronomische Daten</a
+          >
+        </li>
         <li>
           <a href="sonnensystemTabelle.html" class="indexLink"
             >Sonnensystem Tabelle</a
