--- a/Physik/mechanischeWellen.html
+++ b/Physik/mechanischeWellen.html
@@ -39,6 +39,7 @@
         schwingender Punkte entlang der Welle.
       </p>
       <h2>Wellenarten</h2>
+      <h3>Definitionen</h3>
       <ol>
         <li>
           <p>
@@ -161,11 +162,30 @@
         gleicher Frequenz wie die ursprüngliche Welle ausbreiten. Die
         Einhüllende aller Elementarwellen ergibt die neue Wellenfront.
       </p>
+      <h2>Beugung</h2>
+      <p>
+        Das Eindringen von Wellen in den geometrischen Schattenraum hinter
+        Hindernissen und Öffnungen wird als Beugung bezeichnet. Entscheidend für
+        die Ausprägung der Beugungserscheinungen ist das Verhältnis der Größe
+        der Hindernisse zur Wellenlänge. <br />
+        Die Beugung ist besonders stark, wenn das Ausmaß des beugenden
+        Hindernisses von gleicher Größenordnung ist wie die Wellenlänge oder
+        kleiner.
+      </p>
       <h2>Reflexionsgesetz der Wellen</h2>
       <p>
         Der Einfallswinkel $\alpha$ ist gleich dem Ausfallswinkel $\beta$:
         $\alpha = \beta$
       </p>
+      <h2>Brechungsgesetz von Wellen</h2>
+      <p>
+        Treten Wellen aus einem Medium in ein anderes, so besitzen die
+        Wellennormalen der einfallenden und der gebrochenen Welle verschiedene
+        Richtungen. Es gilt:
+      </p>
+      $$ \frac{\sin(\alpha)}{\sin(\beta)} = \frac{v_{ph1}}{v_{ph2}} = konstant
+      $$
+      <p>Siehe auch <a href="wellenoptik.html">Wellenoptik</a>.</p>
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
