--- a/changeLog.html
+++ b/changeLog.html
@@ -129,10 +129,17 @@
             <time>.2024</time>
             <ul>
               <li class="changeLogText">
-                Neit Kapitel an der Physik: Auftrieb, Druck
+                Neit Kapitel an der Physik:Astronomische Daten, Auftrieb,
+                Doppler-Effekt, Druck, Grundlagen der Physik, Stehende Wellen
               </li>
               <li class="changeLogText">
-                Tabelle passen sech elo dem Conent unn
+                Ergänzungen am Kapitel: Mechanische Wellen
+              </li>
+              <li class="changeLogText">
+                Tabelle passen sech elo dem Content un
+              </li>
+              <li class="changeLogText">
+                Formelen sinn elo an enger méi grousser Schrëft geschriwwen
               </li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
