--- a/Elektrotechnik/index.html
+++ b/Elektrotechnik/index.html
@@ -16,7 +16,13 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Elektrotechnik</h1>
+      <h2>Elektrizitätslehre</h2>
       <ol class="orederedListIndex">
+        <li>
+          <a href="elektrischeStromkreis.html" class="indexLink"
+            >Elektrische Stromkreis</a
+          >
+        </li>
         <li>
           <a href="elektrischeFeld.html" class="indexLink">Elektrisches Feld</a>
         </li>
@@ -42,16 +48,11 @@
             >Wechselstromtechnik</a
           >
         </li>
-        <li>
-          <a href="elektrischeWiderstand.html" class="indexLink"
-            >Elektrische Widerstand</a
-          >
-        </li>
       </ol>
       <hr />
       <h2>Schaltungen</h2>
       <ol>
-        <li value="7">
+        <li>
           <a href="rlParallelschaltung.html" class="indexLink"
             >RL - Parallelschaltung</a
           >
@@ -85,7 +86,12 @@
       <hr />
       <h2>Bauteile</h2>
       <ol>
-        <li value="13">
+        <li>
+          <a href="elektrischeWiderstand.html" class="indexLink"
+            >Elektrische Widerstand</a
+          >
+        </li>
+        <li>
           <a href="halbleiterdiode.html" class="indexLink">Halbleiterdiode</a>
         </li>
         <li>
