--- a/Physik/arbeitEnergieLeistung.html
+++ b/Physik/arbeitEnergieLeistung.html
@@ -28,12 +28,14 @@
       <p>
         Wenn ein Körper unter der Einwirkung einer konstanten Kraft \(
         \overrightarrow{F} \) die Strecke \( s \) zurückgelegt, dann wird an ihm
-        die Arbeit \( W \) verrichtet. Die Arbeit kann berechnet werden nach:
+        die Arbeit \( W \) verrichtet.
       </p>
-      $$W=\int^{}_{c} \overrightarrow{F} \left( \overrightarrow{s} \right) \cdot
-      d\overrightarrow{s} $$
+      <h3>Mathematisch</h3>
+      <p>Die Arbeit kann berechnet werden nach:</p>
+      $$W=\int^{}_{c} \overrightarrow{F} \cdot \left( \overrightarrow{s} \right)
+      \cdot d\overrightarrow{s} $$
       <p>oder</p>
-      $$ W = \overrightarrow{F} \cdot \overrightarrow{s} $$
+      $$ W \left( \overrightarrow{F} \right) = F \cdot s $$
       <p>oder</p>
       $$W(\overrightarrow{F})=F\cdot s \cdot \cos(\alpha)$$
       <p>Der Winkel \( \alpha \) ist zwischen Kraftrichtung und Wegrichtung.</p>
@@ -104,21 +106,44 @@
       $$P=\frac{W}{t} $$
       <p>Mit $W = F \cdot s$ erhalten wir</p>
       $$ P = F \cdot v $$
-      <h4>Einheit</h4>
-      $$\left[ P\right] =W $$
-      <h2>Wirkungsgrad</h2>
-      <h3>Formel</h3>
-      $$\eta =\frac{P_{abgeführt}}{P_{zugeführt}} $$
-      <h3>Gesamtwirkungsgrad</h3>
-      $$ \eta_{gesamt} = \eta_1 \cdot \eta_2 \cdot ... \cdot \eta_n $$
       <h3>Einheit</h3>
-      $$ \eta,\ hat\ keine\ Einheit $$
+      $$\left[ P\right] =W $$
       <h2>Drehleistung</h2>
       <h3>Formel</h3>
       $$ P_{rotation} = M \cdot 2 \pi n $$
       <h3>Herleitung</h3>
       $$ P_{rotation} = F_T \cdot v_u $$ $$ = F_T \cdot \omega \cdot r $$ $$ =
       F_T \cdot 2 \pi n \cdot r $$ $$ = M \cdot 2 \pi n $$
+      <h2>Wirkungsgrad</h2>
+      <h3>Definition</h3>
+
+      <p>
+        Der Wirkungsgrad $\eta$ einer Energieumwandlung gibt an, welcher Teil
+        der zugeführten Energie $E_{zu}$ in nutzbare Energie $E_{nutz}$
+        umgewandelt wird:
+      </p>
+      $$ \eta = \frac{E_{nutz}}{E_{zu}} $$
+      <p>oder</p>
+      <p>
+        Der Wirkungsgrad $\eta$ gibt an, welcher Teil der zugeführten Leistung
+        $P_{zu}$ in nutzbare Leistung $P_{nutz}$ umgewandelt wird:
+      </p>
+      $$ \eta = \frac{P_{nutz}}{P_{zu}} $$
+      <p>oder</p>
+      <p>
+        Der Wirkungsgrad $\eta$ gibt an, welcher Teil der zugeführten Arbeit
+        $W_{zu}$ in nutzbare Arbeit $W_{nutz}$ umgewandelt wird:
+      </p>
+      $$ \eta = \frac{W_{nutz}}{W_{zu}} $$
+      <h3>Einheit</h3>
+      $$ \eta,\ hat\ keine\ Einheit $$
+
+      <h2>Gesamtwirkungsgrad</h2>
+      <p>
+        Der Gesamtwirkungsgrad hängt multiplikativ von allen vorherigen und
+        kommenden Wirkungsgraden ab. Es gilt:
+      </p>
+      $$ \eta_{gesamt} = \eta_1 \cdot \eta_2 \cdot ... \cdot \eta_n $$
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
