--- a/Physik/dopplerEffekt.html
+++ b/Physik/dopplerEffekt.html
@@ -49,11 +49,11 @@
             \frac{f}{v_{ph}}$
           </p>
           $$ \Leftrightarrow f_E = f \cdot \frac{v_{ph} + v_E}{v_{ph}}$$
-          $$\Leftrightarrow f_E = f \cdot \left( 1 + \frac{v_E}{v_{ph}} \right)
-          $$
+          $$\Leftrightarrow f_E = f \cdot \underbrace{\left(
+          1+\frac{v_{E}}{v_{ph}} \right) }_{>1} $$
           <p>
-            Die vom Empfänger registrierte Frequenz $f_E$ ist somit höher als
-            die vom Sender ausgesendete Frequenz $f$.
+            Die vom Empfänger registrierte Frequenz $f_E$ ist somit
+            <u>höher</u> als die vom Sender ausgesendete Frequenz $f$.
           </p>
         </li>
         <li>
@@ -61,8 +61,8 @@
           <p>
             Bewegt sich ein Empfänger mit einer Geschwindigkeit $v_E$ von dem
             Sender, der eine Welle mit der Frequenz $f$ und der
-            Phasengeschwindigkeit uph abstrahlt, weg, so erreichen ihn in einer
-            bestimmten Zeit weniger Wellen als wenn er in Ruhe wäre. Die
+            Phasengeschwindigkeit $v_{ph}$ abstrahlt, weg, so erreichen ihn in
+            einer bestimmten Zeit weniger Wellen als wenn er in Ruhe wäre. Die
             Wellenlänge $\lambda$ der Schallwellen in der Luft bleibt zwar
             konstant, jedoch ist die Geschwindigkeit relativ zum Empfänger jetzt
             $ v_{ph} - v_E $. Die Frequenz der vom Empfänger registrierten
@@ -74,11 +74,11 @@
             \frac{f}{v_{ph}}$
           </p>
           $$ \Leftrightarrow f_E^{\prime} = f \cdot \frac{v_{ph} -
-          v_E}{v_{ph}}$$ $$\Leftrightarrow f_E^{\prime} = f \cdot \left( 1 -
-          \frac{v_E}{v_{ph}} \right) $$
+          v_E}{v_{ph}}$$ $$\Leftrightarrow f_E^{\prime} = f \cdot
+          \underbrace{\left( 1-\frac{v_{E}}{v_{ph}} \right) }_{< 1} $$
           <p>
             Die vom Empfänger registrierte Frequenz $f_E^{\prime}$, ist somit
-            niedriger als die vom Sender ausgesendete Frequenz $f$.
+            <u>niedriger</u> als die vom Sender ausgesendete Frequenz $f$.
           </p>
         </li>
       </ul>
@@ -105,10 +105,10 @@
           $$ \frac{\lambda_E}{\lambda} = \frac{\left( v_{ph} - v_S \right) \cdot
           t}{v_{ph} \cdot t} $$ $$ \Leftrightarrow \lambda_E = \lambda \cdot
           \frac{v_{ph} - v_S}{v_{ph}} $$ $$ \Leftrightarrow \lambda_E = \lambda
-          \cdot \left( 1 - \frac{v_S}{v_{ph}} \right) $$
+          \cdot \underbrace{\left( 1 - \frac{v_S}{v_{ph}} \right)}_{< 1} $$
           <p>
-            Die vom Empfänger wahrgenommene Frequenz $f_E$ ist demnach höher als
-            die ausgesendete Frequenz $f$:
+            Die vom Empfänger wahrgenommene Frequenz $f_E$ ist demnach
+            <u>höher</u> als die ausgesendete Frequenz $f$:
           </p>
           $$ f_E = \frac{v_{ph}}{\lambda_E} = \frac{v_{ph}}{\lambda \cdot \left(
           1 - \frac{v_S}{v_{ph}} \right)} = f \cdot \frac{1}{ 1 -
@@ -117,7 +117,7 @@
         <li>
           <p><u>Sender $S$ entfernt sich vom Empfänger $E$ </u></p>
           <p>
-            Entfernt sich der Sender S, der eine Welle mit einer Frequenz $f$
+            Entfernt sich der Sender $S$, der eine Welle mit einer Frequenz $f$
             und einer Phasengeschwindigkeit $v_{ph}$ aussendet, vom Empfänger
             $E$ mit einer Geschwindigkeit $v_S$, so legt er in der Zeit $t$, bei
             seiner Bewegung von $S_1$ nach $S_5$, die Strecke $v_S \cdot t$
@@ -130,11 +130,11 @@
           $$ \frac{\lambda_E^{\prime}}{\lambda} = \frac{\left( v_{ph} + v_S
           \right) \cdot t}{v_{ph} \cdot t} $$ $$ \Leftrightarrow
           \lambda_E^{\prime} = \lambda \cdot \frac{v_{ph} + v_S}{v_{ph}} $$ $$
-          \Leftrightarrow \lambda_E^{\prime} = \lambda \cdot \left( 1 +
-          \frac{v_S}{v_{ph}} \right) $$
+          \Leftrightarrow \lambda_E^{\prime} = \lambda \cdot \underbrace{\left(
+          1 + \frac{v_S}{v_{ph}} \right)}_{>1} $$
           <p>
             Die vom Empfänger wahrgenommene Frequenz $f_E^{\prime}$ ist demnach
-            niedriger als die ausgesendete Frequenz $f$:
+            <u>niedriger</u> als die ausgesendete Frequenz $f$:
           </p>
           $$ f_E = \frac{v_{ph}}{\lambda_E} = \frac{v_{ph}}{\lambda \cdot \left(
           1 + \frac{v_S}{v_{ph}}\right)} = f \cdot \frac{1}{1 +
