--- a/Physik/druck.html
+++ b/Physik/druck.html
@@ -71,9 +71,9 @@
       <h3>Formel</h3>
       $$ p = \frac{F}{A}$$
       <h3>Einheit</h3>
-      $$[p] = \frac{[N]}{[m^2]} $$
+      $$[p] = \frac{N}{m^2} $$
       <p>oder</p>
-      $$[p] = [Pa] $$ $$Pa,\ Pascal$$
+      $$[p] = Pa $$ $$Pa,\ Pascal$$
       <h2>Manometer</h2>
       <p>Zum Messen des Drucks benutzt man einen: <i>Manometer</i>.</p>
       <h2>Schweredruck, hydrostatischer Druck</h2>
@@ -97,7 +97,7 @@
         class="zeichnungen"
       />
       <p>Für den Druck gilt:</p>
-      $$ p = \frac{F}{A}$$ $$ = \frac{m \cdot g}{A}$$ $$ = \frac{ \rho \cdot V
+      $$ p = \frac{F_G}{A}$$ $$ = \frac{m \cdot g}{A}$$ $$ = \frac{ \rho \cdot V
       \cdot g}{A}$$ $$ = \frac{ \rho \cdot A \cdot h \cdot g}{A}$$ $$ = \rho
       \cdot g \cdot h $$
       <h3>Formel</h3>
