--- a/Physik/grundlagenMechanik.html
+++ b/Physik/grundlagenMechanik.html
@@ -54,8 +54,8 @@
       <h3>Definition</h3>
       <p>
         Jeder Körper behaart in Zustand der Ruhe oder der geradlining
-        gleichförmigen Bewegung, wenn keine äu&beta;eren Kräfte auf ihn wirken
-        oder die Wirkung der Kräfte sich ausgleichen.
+        gleichförmigen Bewegung, wenn keine äußeren Kräfte auf ihn wirken oder
+        die Wirkung der Kräfte sich ausgleichen.
       </p>
       <h2>Trägheit</h2>
       <h3>Definition</h3>
@@ -63,6 +63,39 @@
         Die Trägheit ist die Eigenschaft von Körpern sich Änderungen des
         Bewegungszustandes zu widersetzen. Die Masse ist eine Messung für die
         Trägheit.
+      </p>
+      <h2>Wechselwirkungsprinzip, Reaktionsprinzip, Actio-Reactio</h2>
+      <h3>Definition</h3>
+      <p>
+        Übt der Körper $A$ eine Kraft $\overrightarrow{F_A}$ (actio) auf den
+        Körper $B$ aus, so übt Körper $B$ auf Körper $A$ die Gegenkraft
+        $\overrightarrow{F_B}$ (reactio) aus. Dabei sind Kraft und Gegenkraft
+        gleich groß, aber genau entgegengesetzt gerichtet. Es gilt:
+      </p>
+      $$ \overrightarrow{F_A} = - \overrightarrow{F_B} $$
+      <h2>Schwerkraft</h2>
+      <h3>Definition</h3>
+      <p>
+        Die Schwerkraft gibt an, mit welcher Kraft ein Körper von der Erde oder
+        einem anderen Himmelskörper angezogen wird. Sie ist zum Mittelpunkt der
+        Erde beziehungsweise des Himmelskörpers gerichtet.
+      </p>
+      <h2>Gewichtskraft</h2>
+      <h3>Definition</h3>
+      <p>
+        Die Gewichtskraft $\overrightarrow{F_G}$ eines Körpers gibt an, mit
+        welcher Kraft der Körper an seiner Aufhängung zieht oder auf seine
+        waagerechte Unterlage drückt.
+      </p>
+      <h2>Fallbeschleunigung, Ortsfaktor</h2>
+      <h3>Definition</h3>
+      <p>
+        Die Fallbeschleunigung $g$ ist eine Zahl die angibt wie viel Schwerkraft
+        eine Masse eines Objektes erfährt.
+      </p>
+      <h2>Schwerelosigkeit</h2>
+      <p>
+        Schwerelos zu sein bedeutet nicht, dass man nicht mehr angezogen wird.
       </p>
     </div>
     <div class="scrollButton">
