--- a/Physik/index.html
+++ b/Physik/index.html
@@ -54,6 +54,9 @@
         <li>
           <a href="druck.html" class="indexLink">Druck</a>
         </li>
+        <li>
+          <a href="hookschesGesetz.html" class="indexLink">Hook'sches Gesetz</a>
+        </li>
         <li><a href="impuls.html" class="indexLink">Impuls</a></li>
         <li>
           <a href="kinematik.html" class="indexLink">Kinematik</a>
