--- a/Physik/mechanischeWellen.html
+++ b/Physik/mechanischeWellen.html
@@ -66,7 +66,7 @@
         durch einen Oszillator am Ursprung $x=0$ und hat eine Amplitude
         $y_{max}$ und eine Frequenz $f$. <br />
         Breitet sich die Welle in positiver $x$-Richtung aus, dann erreicht die
-        Welle einen Ort $x$ mit einer Verspätung $\Delta t$ <br />
+        Welle einen Ort $x$ mit einer Verspätung $\Delta t$. <br />
         Zu einem Zeitpunkt $t$ führt der Punkt $x$ die gleiche Schwingung aus,
         welche der Ursprung zum Zeitpunkt $t- \Delta t$ durchgeführt hat. <br />
         Für die Elongation am Ort $x$ zum Zeitpunkt $t$ gilt also:
@@ -96,6 +96,7 @@
         so addieren sich dort die Elongationen der Schwingungen $(y = y_1 +
         y_2)$. Nach dem Zusammentreffen laufen die Wellen ungestört weiter.
       </p>
+      <img src="img/" alt="" />
       <h2>Interferenz</h2>
       <p>
         Die ungestörte Überlagerung mehrerer Wellen von gleicher Frequenz wird
@@ -145,9 +146,9 @@
       <h3>Definition</h3>
       <p>
         Wellen, die von Erregerzentren ausgehen, die eine konstante
-        Phasendifferenz haben, hei&beta;en kohärent. Kohärenz ist eine
-        unabdingbare Voraussetzung für die Entstehung eines über längere Zeit
-        beobachtbaren Interferenzphänomens.
+        Phasendifferenz haben, heißen kohärent. Kohärenz ist eine unabdingbare
+        Voraussetzung für die Entstehung eines über längere Zeit beobachtbaren
+        Interferenzphänomens.
       </p>
       <h2>Synchronität</h2>
       <h3>Definition</h3>
@@ -175,8 +176,8 @@
       <h2>Reflexionsgesetz der Wellen</h2>
       <p>
         Der Einfallswinkel $\alpha$ ist gleich dem Ausfallswinkel $\beta$:
-        $\alpha = \beta$
-      </p>
+
+      </p>        $$\alpha = \beta$$
       <h2>Brechungsgesetz von Wellen</h2>
       <p>
         Treten Wellen aus einem Medium in ein anderes, so besitzen die
