--- a/Physik/reibung.html
+++ b/Physik/reibung.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="de" dir="ltr">
   <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Niederkorn Damon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
     <script src="../assets/insertChapterHTML.js"></script>
+    <script src="../assets/mathJax.js"></script>
+
     <script
       type="text/javascript"
       id="MathJax-script"
@@ -21,76 +22,103 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <p id="printWatermark"></p>
-      <main>
-        <h1>Reibung</h1>
-        <img src="" alt="" />
-        <h3>Haftreibung</h3>
-        <p>Ist ein Körper in Ruhe so gilt:</p>
-        $$\overrightarrow{v} =\overrightarrow{0}$$
-        <p>Bei Haftreibung gilt dann, durch Actio-Reactio</p>
-        $$F_{R0}=F$$
-        <h3>Maximale Haftreibung</h3>
-        $$F_{R0,max}=\mu_{0} \cdot F_{N}$$ $$\mu_{0} ,\ Haftreibungskoeffizient
-        $$
-        <h3>Gleitreibung</h3>
-        <p>
-          Gleitreibung bedeutet dass der Körper sich mit konstanter
-          Geschwindigkeit bewegt
-        </p>
-        $$\overrightarrow{v} =\ konstant$$
-        <p>Der Körper kommt in Bewegung (Gleitreibung) erst wenn</p>
-        $$F\ >\ F_{R0,max}$$
-        <p>also,</p>
-        $$F =F_{R}=\mu \cdot F_{N}$$ $$\mu ,\ Gleitreibungskoeffizient$$
-        <h2>Reibungskoeffizient</h2>
-        <h3>Formelzeichen</h3>
-        $$\mu $$ $$\ \left[ \mu \right] \rightarrow keine\ Einheit$$
-        <p></p>
-        <h3>Theorie</h3>
-        <p>
-          Jede Unterlage ist rau, sie bewirkt also eine Reibung durch
-          mikroskopische Unbeschaffenheiten welche ineinander Fallen bei zwei
-          Körpern. Haftreibung wird durch einsacken des Körpers in die
-          Unbeschaffenheiten erzeugt und Gleitreibung indem der Körper über die
-          Unbeschaffenheiten rutscht.
-        </p>
-        $$\mu_{Haftreibung} >\mu_{Gleitreibung} $$ $$F_{Haftreibung} >
-        F_{Gleitreibung} $$
-        <p>
-          Die Haftreibung und Haftreibungskoeffizient sind also immer
-          grö&beta;er als die Gleitreibung oder der Gleitreibungskoeffizient.
-        </p>
-        <p>
-          Die Reibungskoeffizienten sinn abhängig von den zwei Stoffen die
-          aufeinander wirken. Da die Reibungszahl eine Zahl ist ist sie
-          einheitslos.
-        </p>
-        <h2>Selbsthemmung auf der schiefen Ebene</h2>
-        <p>
-          Ist die Haftreibung grö&beta;er oder gleich der Hangabtriebskraft so
-          herrscht Selbsthemmung. Es herrscht also keine Bewegung, der Körper
-          bewegt sich grade nicht nach oben und gerade nicht nach unten.
-        </p>
-        $$\overrightarrow{v} =\overrightarrow{0}$$ $$\Sigma F=0$$
-        <h3>Reibung</h3>
-        <p>Es herrscht maximale Haftreibung.</p>
-        <h3>Suche nach maximalem Haftreibungswinkel &alpha;</h3>
-        $$\begin{cases}\Sigma F_{x}=0=\mu_{0} \cdot F_{N}-F_{g}\cdot \sin \left(
-        \alpha \right) &\left( 1\right) \\ \Sigma F_{y}=0=F_{N}-F_{g}\cos \left(
-        \alpha \right) &\left( 2\right) \end{cases} $$
-        <p>Aus (2):</p>
-        $$F_{N}=F_{g}\cdot \cos \left( \alpha \right) \ (3)$$
-        <p>(3) in (1):</p>
-        $$\mu_{0} \cdot F_{g}\cos \left( \alpha \right) -F_{g}\sin \left( \alpha
-        \right) =0$$ $$\Leftrightarrow \underbrace{F_{g}}_{>0} \cdot \left[
-        \mu_{0} \cos \left( \alpha \right) -\sin \left( \alpha \right) \right]
-        $$ $$\Leftrightarrow \mu_{0} \cos \left( \alpha \right) -\sin \left(
-        \alpha \right) =0$$ $$\Leftrightarrow \mu_{0} =\frac{\sin \left( \alpha
-        \right) }{\cos \left( \alpha \right) } =\tan \left( \alpha \right) $$
-        $$\Leftrightarrow \alpha_{max} =\tan^{-1} \left( \mu_{0} \right) $$
-        <p>Es herrscht Selbsthemmung wenn</p>
-        $$\alpha_{max} =\tan^{-1} \left( \mu_{0} \right) $$
-      </main>
+      <h1>Reibung</h1>
+      <h2>Ursprung der Reibung</h2>
+      <p>
+        Die Hauptursache für das Auftreten von Reibungskräften liegt in der
+        Oberflächenbeschaffenheit der Körper. Diese Oberflächen sind mehr oder
+        weniger rau. Auch bei scheinbar glatten Oberflächen bestehen
+        mikroskopisch kleine Unebenheiten. Wenn Körper aufeinander liegen oder
+        sich gegeneinander bewegen, so verhaken sich die Unebenheiten der
+        Flächen. Ursache für die Rollreibung ist das Verformen des Körpers auf
+        dem der Körper abrollt.
+      </p>
+      <h2>Normalkraft</h2>
+      <h3>Definition</h3>
+      <p>
+        Die Kraft mit der ein Körper senkrecht auf seine Unterlage drückt wird
+        als Normalkraft $\overrightarrow{F_N}$ bezeichnet. Wenn ein Körper auf
+        einer waagerechten und horizontalen Fläche steht, ist die Normalkraft
+        gleich der Gewichtskraft $\overrightarrow{F_G}$.
+      </p>
+
+      <h2>Reibungskoeffizient</h2>
+      <p>
+        Die Reibungskoeffizienten sinn abhängig von den zwei Stoffen die
+        aufeinander wirken. Die Reibungszahl ist eine Zahl, sie ist einheitslos.
+      </p>
+      <h3>Formelzeichen</h3>
+      $$\mu $$ $$\ \left[ \mu \right] \rightarrow keine\ Einheit$$
+      $$\mu_{Haftreibung} >\mu_{Gleitreibung} $$ $$F_{Haftreibung} >
+      F_{Gleitreibung} $$
+
+      <h2>Haftreibung</h2>
+      <h3>Definition</h3>
+      <p>
+        Die Haftreibungskraft $F_{HR}$ ist direkt proportional zur Normalkraft
+        $F_N$ . Also gilt: $\frac{F_{HR}}{F_N} = konstant$.
+      </p>
+      <h3>Allgemein</h3>
+      <p>Ist ein Körper in Ruhe so gilt:</p>
+      $$\overrightarrow{v} =\overrightarrow{0}$$
+      <p>Bei Haftreibung gilt dann, durch Actio-Reactio</p>
+      $$F_{HR}=F$$
+      <h2>Maximale Haftreibung</h2>
+      $$F_{HR,max}=\mu_{0} \cdot F_{N}$$ $$\mu_{0} ,\ Haftreibungskoeffizient $$
+      <h2>Gleitreibung</h2>
+      <h3>Definition</h3>
+      <p>
+        Die Gleitreibungskraft $F_{GR}$ ist direkt proportional zur Normalkraft
+        $F_N$ . Also gilt: $\frac{F_{GR}}{F_N} = konstant$.
+      </p>
+      <h3>Allgemein</h3>
+      <p>
+        Gleitreibung bedeutet dass der Körper sich mit konstanter
+        Geschwindigkeit bewegt
+      </p>
+      $$\overrightarrow{v} =\ konstant$$
+      <p>Der Körper kommt in Bewegung oder Gleitreibung erst wenn</p>
+      $$F_{GR}\ >\ F_{HR}$$
+      <p>also,</p>
+      $$F =F_{R}=\mu \cdot F_{N}$$ $$\mu ,\ Gleitreibungskoeffizient$$
+      <h2>Reibungskoeffizient</h2>
+      <h3>Formelzeichen</h3>
+      $$\mu $$ $$\ \left[ \mu \right] \rightarrow keine\ Einheit$$
+      $$\mu_{Haftreibung} >\mu_{Gleitreibung} $$ $$F_{Haftreibung} >
+      F_{Gleitreibung} $$
+      <p>
+        Die Haftreibung und Haftreibungskoeffizient sind also immer größer als
+        die Gleitreibung oder der Gleitreibungskoeffizient.
+      </p>
+      <h2>Selbsthemmung auf der schiefen Ebene</h2>
+      <p>
+        Ist die Haftreibung größer oder gleich der Hangabtriebskraft so herrscht
+        Selbsthemmung. Es herrscht also keine Bewegung, der Körper bewegt sich
+        grade nicht nach oben und gerade nicht nach unten.
+      </p>
+      $$\overrightarrow{v} =\overrightarrow{0}$$ $$\Sigma F=0$$
+      <h3>Reibung</h3>
+      <p>
+        Es herrscht maximale Haftreibung. <br />
+        Suche nach maximalem Haftreibungswinkel $\alpha$:
+      </p>
+      $$\begin{cases}\Sigma F_{x}=0 & \\ \Sigma F_{y}=0 \end{cases} $$ $$
+      \Leftrightarrow \begin{cases}\Sigma F_{x}=\mu_{0} \cdot F_{N}-F_{g}\cdot
+      \sin \left( \alpha \right) &\left( 1\right) \\ \Sigma
+      F_{y}=F_{N}-F_{g}\cos \left( \alpha \right) &\left( 2\right) \end{cases}
+      $$
+      <p>Aus (2):</p>
+      $$F_{N}=F_{g}\cdot \cos \left( \alpha \right) \ (3)$$
+      <p>(3) in (1):</p>
+      $$\mu_{0} \cdot F_{g}\cos \left( \alpha \right) -F_{g}\sin \left( \alpha
+      \right) =0$$ $$\Leftrightarrow \underbrace{F_{g}}_{>0} \cdot \left[
+      \mu_{0} \cos \left( \alpha \right) -\sin \left( \alpha \right) \right] $$
+      $$\Leftrightarrow \mu_{0} \cos \left( \alpha \right) -\sin \left( \alpha
+      \right) =0$$ $$\Leftrightarrow \mu_{0} =\frac{\sin \left( \alpha \right)
+      }{\cos \left( \alpha \right) } =\tan \left( \alpha \right) $$
+      $$\Leftrightarrow \alpha_{max} =\tan^{-1} \left( \mu_{0} \right) $$
+      <p>Es herrscht Selbsthemmung wenn:</p>
+      $$\alpha_{max} =\tan^{-1} \left( \mu_{0} \right) $$
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
