--- a/Physik/stehendeWellen.html
+++ b/Physik/stehendeWellen.html
@@ -32,7 +32,7 @@
       <img
         src="img/Stehende Wellen/relexionVonWellenKuerz.png"
         class="zeichnungen"
-        alt="Relfexion von Wellen"
+        alt="Reflexion von Wellen"
       />
       <h2>Entstehung von stehenden Wellen</h2>
       <p>
@@ -57,7 +57,7 @@
       <p>
         Am festen Ende eines Wellenträgers bildet sich ein Schwingungsknoten.
         <br />
-        Am frei.en Ende eines Wellenträgers bildet sich ein Schwingungsbauch.
+        Am freien Ende eines Wellenträgers bildet sich ein Schwingungsbauch.
         <br />Der Abstand zwischen zwei Schwingungsknoten beträgt
         $\frac{\lambda}{2}$.
       </p>
@@ -192,7 +192,7 @@
       <h2>Eigenschwingungen</h2>
       <p>
         Es gilt: <br />
-        Am geschlossenen Rohrende sich ein Schwingungsknoten. Am offenen
+        Am geschlossenen Rohrende bildet sich ein Schwingungsknoten. Am offenen
         Rohrende bildet sich ein Schwingungsbauch.
       </p>
 
