--- a/Programmen/converter.html
+++ b/Programmen/converter.html
@@ -76,12 +76,12 @@
               Fir Erklärungen kuckt
               <a
                 class="converterLinkAnchor"
-                href="Divers/exotischeUmwandlungen.html"
+                href="../Divers/exotischeUmwandlungen.html"
               >
                 exotische Umwandlungen</a
               >
               oder
-              <a class="converterLinkAnchor" href="Divers/praefixe.html"
+              <a class="converterLinkAnchor" href="../Divers/praefixe.html"
                 >Präfixe</a
               >.
             </p>
