--- a/astellungen.html
+++ b/astellungen.html
@@ -30,6 +30,8 @@
                 <option value="vaporWaveTheme">Vapor Wave</option>
                 <option value="retroLuxformel">Retroformel</option>
                 <option value="damonsFormulaTips">Damons Formula Tips</option>
+                <option value="pastel">Pastel</option>
+                <option value="patriot">Patriot</option>
               </select>
             </div>
             <h2>Astellungen fir den Navigator</h2>
