--- a/changeLog.html
+++ b/changeLog.html
@@ -130,11 +130,16 @@
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Physik:Astronomische Daten, Auftrieb,
-                Doppler-Effekt, Druck, Grundlagen der Physik, Stehende Wellen
+                Doppler-Effekt, Druck, Grundlagen der Physik,Hook'sches Gesetz,
+                Stehende Wellen
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Physik: Elektrische Stromkreis
               </li>
               <li class="changeLogText">
                 Ergänzungen am Kapitel: Mechanische Wellen
               </li>
+              <li class="changeLogText">Neie Stil: Pastel, Patriot</li>
               <li class="changeLogText">
                 Tabelle passen sech elo dem Content un
               </li>
